examples/test/testpolicy3128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3128
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key49: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value40
          key41: value32
      podSelector:
        matchLabels:
          key34: value23
          key45: value40
          key23: value9
